export enum TransportationType {
  CAR,
  BICYCLE,
  FOOT,
}
